tests/ui/extern/extern-const.stderr
error: extern items cannot be `const`
  --> $DIR/extern-const.rs:16:11
   |
LL |     const crablang_dbg_static_mut: libc::c_int;
   |     ------^^^^^^^^^^^^^^^^^^^
   |     |
   |     help: try using a static value: `static`
   |
   = note: for more information, visit https://doc.crablang.org/std/keyword.extern.html

error: aborting due to previous error

